# smite

./: Cargo.toml  README.md
.github/workflows/: docker-target.yml  docker.yml  rust.yml
scripts/: check-bolt-msg-type-order.sh  coverage-report.sh  setup-nyx.sh  start-fuzz.sh
smite/: Cargo.toml
smite-ir/: Cargo.toml
smite-ir-mutator/src/: lib.rs
smite-ir/src/: builder.rs  generators.rs  lib.rs  mutators.rs  operation.rs  program.rs  tests.rs  variable.rs
smite-ir/src/generators/: channel_announcement.rs  open_channel.rs
smite-ir/src/mutators/: instruction_reorder.rs  operation_param.rs
smite-scenarios/: Cargo.toml
smite-scenarios/src/: executor.rs  lib.rs  scenarios.rs  targets.rs
smite-scenarios/src/scenarios/: encrypted_bytes.rs  init.rs  ir.rs  noise.rs  raw_bytes.rs  setup.rs
smite-scenarios/src/targets/: cln.rs
smite/src/: bitcoin.rs  bolt.rs  channel_tx.rs  lib.rs  oracles.rs  process.rs  runners.rs  scenarios.rs
smite/src/bolt/: announcement_signatures.rs  attribution_data.rs  channel_ready.rs  commitment.rs  funding_created.rs  gossip_timestamp_filter.rs  init.rs  open_channel.rs  shutdown.rs  tlv.rs  tx_add_input.rs  tx_complete.rs  types.rs  update_fail_htlc.rs  update_fulfill_htlc.rs  wire.rs
smite/src/channel_tx/: commitment.rs
smite/src/noise/: cipher.rs
workloads/cln/: Dockerfile
workloads/eclair/: Dockerfile
workloads/ldk/: Dockerfile
workloads/lnd/: Dockerfile
