[package]
name = "smite-ir"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
smite = { path = "../smite" }
rand = { version = "0.10", default-features = false }
serde.workspace = true
postcard.workspace = true
secp256k1.workspace = true
